--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -75,4 +75,10 @@
   border-radius: 0.5rem;
   padding: 0.5rem;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.05);
+  background-color: white;
+}
+
+.my-h3 {
+  font-size: 1.2rem;
+  font-weight: 600;
 }
