--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -76,6 +76,8 @@
   padding: 0.5rem;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.05);
   background-color: white;
+  max-height: 500px;
+  overflow: auto;
 }
 
 .my-h3 {
