--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,6 +37,10 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .footer--dark {
   background-color: #161b26;
 }
