--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -101,3 +101,20 @@ html {
 .navbar__search-input {
   border-radius: 6px;
 }
+
+/* Table styles */
+table {
+  width: 100%;
+  display: table;
+  margin: 1rem 0;
+}
+
+table th,
+table td {
+  padding: 0.75rem;
+}
+
+table th {
+  font-weight: bold;
+  text-align: left;
+}
